--- a/public/name-meaning.css
+++ b/public/name-meaning.css
@@ -12,7 +12,7 @@ body {
 
 .navigation__ul {
   padding: 0;
-  margin: 0;
+  margin: 0.8rem;
   list-style: none;
   display: flex;
   justify-content: space-between;
